--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
+  width: 99vw;
   background-color: white;
   display: flex;
   height: 104px;
@@ -19,12 +19,13 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 20px 80px;
-  gap: 457px;
+  /* gap: 357px; */
 }
 
 @media (max-width: 375px) {
   nav {
     width: 100vw;
+    padding: 20px 80px;
   }
 }
 
@@ -35,6 +36,7 @@ nav {
   gap: 40px;
   width: 483px;
   height: 48px;
+  color: black;
   /* margin-right: auto; */
 }
 
@@ -46,7 +48,7 @@ nav {
 
 @media (max-width: 375px) {
   .nav--left--first {
-    width: 40vw;
+    width: 30vw;
     margin-left: -50px;
   }
 }
@@ -65,7 +67,11 @@ nav {
     height: 24px;
 }
 
-@media (max-width: 600px) {
+.nav--left--second a {
+  color: black;
+}
+
+@media (max-width: 700px) {
   .nav--left--second {
     display: none;
   }
@@ -77,24 +83,28 @@ nav {
 }
 
 .nav--right {
-  position: relative;
+  /* position: relative; */
   display: flex;
     flex-direction: row;
     justify-content: flex-end;
     padding: 0px;
     gap: 24px;
+    /* margin-right: -60px; */
     /* width: 705px; */
     width: 100%;
     height: 64px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .nav--right {
     display: none;
+    right: 40px;
+    width: 30vw;
+    border: 5px solid red;
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 700px) {
   .burger {
       position: absolute;
       right: 20px;
@@ -102,7 +112,7 @@ nav {
     }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
   .burger {
       display: none;
     }
@@ -126,6 +136,10 @@ nav {
   height: 900px;
   /* left: 68px; */
   z-index: 1;
+}
+
+.open--nav a {
+  color: black;
 }
 
 .links--container {
@@ -178,7 +192,7 @@ nav {
     height: 56px;
     border: 1px solid #EF6820;
     border-radius: 8px;
-  /* color: #EF6820; */
+  color: #EF6820;
   /* background-color: white; */
   /* border-color: #EF6820; */
   text-decoration: none;
@@ -193,6 +207,12 @@ nav {
     margin-right: auto;
 }
 
+@media (max-width: 700px) {
+  .hero--heading {
+    margin-top: 100px;
+  }
+}
+
 .hero--heading h1 {
   font-family: 'Outfit';
     font-style: normal;
@@ -204,24 +224,18 @@ nav {
     color: #2B2A30;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 700px) {
   .hero--heading h1 {
-    position: absolute;
-      height: 108px;
-      left: 5.72%;
-      right: 5.96%;
-      top: 136px;
-      font-family: 'Outfit';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 36px;
-      text-align: center;
-      letter-spacing: -0.025em;
-      font-feature-settings: 'tnum' on, 'lnum' on;
-      color: #2B2A30;
+    font-size: 56px;
   }
 }
+
+@media (max-width: 400px) {
+  .hero--heading h1 {
+    font-size: 45px;
+  }
+}
+
 
 .paragraf {
   display: flex;
@@ -230,35 +244,53 @@ nav {
     align-items: center;
     padding: 0px;
     gap: 16px;
-    position: absolute;
+    /* position: absolute; */
     height: 100px;
-    left: 12.9%;
-    right: 12.9%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vw;
     margin-top: 100px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1315px) {
   .paragraf {
-    width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 0px;
-      gap: 44px;
-    
-      position: absolute;
-      height: 156px;
-      left: 5.37%;
-      right: 5.61%;
-      top: 284px;
+    height: 140px;
+    /* margin-bottom: 500px !important; */
   }
 }
 
+@media (max-width: 1200px) {
+  .paragraf {
+    height: min-content;
+    gap: 56px;
+  }
+}
+
+@media (max-width: 700px) {
+  .paragraf {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100vw;
+    height: min-content;
+    gap: 56px;
+    /* margin-left: auto; */
+    margin-right: auto;
+
+  }
+}
+
+
+
+@media (max-width: 500px) {
+  .paragraf {
+    margin-top: 50px !important;
+  }
+}
+
+
 .paragraf p {
-  width: 1050px;
+  width: 80vw;
     height: 48px;
     font-family: 'Outfit';
     font-style: normal;
@@ -270,22 +302,29 @@ nav {
     color: #2B2A30;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1000px) {
   .paragraf p {
-      width: 80vw;
-      height: 42px;
-      font-family: 'Outfit';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 20px;
-      /* or 143% */
-      text-align: center;
-      letter-spacing: 0.08em;
-      text-transform: capitalize;
-      font-feature-settings: 'tnum' on, 'lnum' on, 'liga' off;
-      color: #2B2A30;
-    }
+    width: 80vw;
+    height: 28px;
+  }
+}
+
+@media (max-width: 650px) {
+  .paragraf p {
+    height: min-content;
+  }
+}
+
+
+.fig--container {
+  border: 3px solid green;
+}
+
+@media (max-width: 650px) {
+  .fig--container {
+    margin-top: 150px;
+
+  }
 }
 
 figure {
@@ -294,54 +333,78 @@ figure {
     align-items: start;
     padding: 0px;
     gap: 32px;
-    position: absolute;
+    /* position: absolute; */
     height: 692px;
     /* left: 5.29%; */
     /* right: 5.49%; */
-    top: 914px;
+    margin-top: 114px;
     background: #F3F3F4;
     border-radius: 8px;
-    margin-left: 15%;
-    /* margin-right: 10%; */
+    /* margin-left: 15%; */
+    width: 70vw;
+    margin-right: auto;
+    margin-left: auto !important;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1315px) {
   figure {
     display: flex;
-      flex-direction: column;
-      align-items: center;
-      /* padding: 0px; */
-      gap: 16px;
-    
-      /* position: absolute; */
-      height: 270px;
-      left: auto;
-      right: auto;
-      top: 580px;
-    
-      /* Grey/100 */
-    
-      background: #F3F3F4;
-      border-radius: 8px;
+    /* position: absolute; */
+    margin-top: 200px;
   }
 }
 
+@media (max-width: 650px) {
+  figure {
+    margin-top: 80px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 600px) {
+  figure {
+    height: 492px;
+  }}
+
+  @media (max-width: 375px) {
+    figure {
+      height: 390px;
+    }
+  }
+
+
+
 figure img {
-  width: 1349px;
+  width: 100%;
     height: 588px;
     /* background: url(image.png); */
     border-radius: 8px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1315px) {
   figure img {
-    width: 70vw;
-    height: 228px;
+    display: flex;
+    /* position: absolute; */
+    /* margin-top: 1800px !important; */
   }
 }
 
+@media (max-width: 650px) {
+  figure img {
+    height: 388px;
+  }
+}
+
+@media (max-width: 375px) {
+  figure img {
+    height: 280px;
+  }
+}
+
+
+
 figcaption {
-  width: 464px;
+  width: 100%;
     height: 72px;
     font-family: 'Outfit';
     font-style: normal;
@@ -355,43 +418,33 @@ figcaption {
     /* margin-left: -100px; */
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   figcaption {
-    width: 70vw;
-      height: 26px;
-    
-      font-family: 'Outfit';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 20px;
-      /* or 143% */
-      letter-spacing: 0.08em;
-      text-transform: capitalize;
-      font-feature-settings: 'tnum' on, 'lnum' on, 'liga' off;
-      color: #565560;
+    font-size: 18px;
+    text-align: left;
   }
+}
+
+
+.article {
+  border: 8px solid green;
+  padding-bottom: 100px;
 }
 
 article {
   /* width: 60vw; */
-  padding-left: 20%;
-  padding-right: 20%;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
     /* position: absolute; */
-      height:fit-content;
-      margin-top: 1090px;
+      height:min-content;
+      margin-top: 160px;
 }
 
-@media (max-width: 375px) {
-  article {
-      margin-top: 900px;
-      height: 1400px;
-  }
-}
 
 article p {
   /* position: absolute; */
-    height: 864px;
+    height:fit-content;
     /* left: 12.9%; */
     /* right: 12.9%; */
     top: 1010px;
@@ -405,90 +458,75 @@ article p {
     color: #565560;
 }
 
-@media (max-width: 375px) {
-  article p {
-    position: absolute;
-      height: 1328px;
-      left: 5.37%;
-      right: 5.61%;
-      /* top: 740px; */
-      font-family: 'Outfit';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 24px;
-      /* or 150% */
-      letter-spacing: 0.01em;
-      font-feature-settings: 'tnum' on, 'lnum' on, 'liga' off;
-      color: #565560;
-  }
+
+.footer {
+  width: 100vw;
+}
+
+@media (max-width: 1500px) {
+    .footer {
+        width: 100vw;
+        /* margin-top: 100px; */
+      }
 }
 
 footer {
   /* position: absolute; */
-  width: 100vw;
+  width: 100%;
     height: 653px;
-    left: 0%;
-    right: 0%;
+    margin-left: 0;
+    margin-right: 0;
     bottom: 0px;
     /* padding: 20%; */
     color: white;
+    border: 10px solid green;
+    /* z-index: 10; */
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   footer {
-    /* margin-top: 3300px; */
-    display: flex;
-    flex-direction: column;
-    height: 1300px;
-    width: 95vw;
+    height: 1200px;
   }
 }
 
+
 div.footer--top {
-  width: 100vw;
-  height:20%;
+  width: 100%;
+  height: 10%;
   background-color: #F2E7D5;
 }
 
-@media (max-width: 375px) {
-  div.footer--top {
-    display: flex;
-    flex-direction: column;
-    /* margin-top: 200px; */
-    height: 10%;
-    width: 95vw;
+@media (max-width: 600px) {
+  dv.footer--top {
+    width: 100%;
+      height: 10%;
+      background-color: #F2E7D5;
+      border: 5px solid purple;
+      z-index: 9;
   }
 }
+
 
 .bottom {
-  width: 100vw;
-  height: 80%;
+  width: 100%;
+  height: 90%;
   padding: 4% 8% 8% 8%;
-  
+background-color: #B93815;
 }
 
-@media (max-width: 375px) {
-  .bottom {
-    /* position: absolute; */
-    height: 90%;
-    background-color: #B93815;
-    width: 95vw;
-  }
-}
 
 .footer--head {
   display: flex;
   flex-direction: row;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .footer--head {
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
   }
 }
+
 
 .footer--head--left {
   display: flex;
@@ -496,13 +534,6 @@ div.footer--top {
   margin-right: auto;
 }
 
-@media (max-width: 375px) {
-  .footer--head--left {
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-  }
-}
 
 .footer--head--left img {
   gap: 4px;
@@ -527,13 +558,14 @@ div.footer--top {
     /* top: 228px; */
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .footer--links--left {
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    width: 50vw;
   }
 }
+
 
 .footer--head--left a {
   text-decoration: none;
@@ -555,14 +587,13 @@ div.footer--top {
     /* top: 144px; */
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .footer--head--right {
-    display: flex;
-    flex-direction: column;
-  margin-top: 500px;
-  width: 200px;
+    margin-top: 550px;
+    width: 100%;
   }
 }
+
 
 .app--stores {
   display: flex;
@@ -575,42 +606,25 @@ div.footer--top {
     /* height: 108px; */
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .app--stores {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
   }
 }
 
-.apple--app {
-  display: flex;
-  flex-direction: row;
-  /* align-items: flex-start; */
-}
+@media (max-width: 600px) {
+  .app--stores img {
+    width: 100%;
 
-.apple--text {
-  width: 100%;
-}
-
-.google--app {
-  display: flex;
-  flex-direction: row;
-}
-
-.google--text {
-  width: 100%;
+  }
 }
 
 hr {
   margin-top: 100px;
 }
 
-@media (max-width: 375px) {
-  hr {
-    margin-top: 50px;
-  }
-}
 
 .footer--foot {
   display: flex;
@@ -618,38 +632,39 @@ hr {
   align-items: flex-end;
   height: 100%;
   margin-bottom: 0;
-  margin-top: -120px !important;
+  margin-top: -150px !important;
+  padding-bottom: 5%;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .footer--foot {
+    margin-top: 50px !important;
     display: flex;
+    height: 100px;
     flex-direction: column;
-    /* justify-content: flex-start; */
     align-items: flex-start;
-    margin-top: 100px;
-    height: 10%;
+    /* padding-bottom: 15% !important; */
   }
 }
+
+@media (max-width: 800px) {
+  .footer--foot {
+    padding-bottom: 20%;
+  }
+}
+
 
 .footer--foot--left {
   margin-right: auto;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .footer--foot--left {
     position: absolute;
-    /* margin-top: 400px; */
-    margin: 280px auto  0 auto;
-    /* margin-bottom: 0; */
+    margin-top: 80px;
   }
 }
 
-@media (max-width: 375px) {
-  .footer--foot--left p {
-    font-size: 12px;
-  }
-}
 
 .footer--foot--right {
   display: flex;
@@ -659,17 +674,24 @@ hr {
   /* width: 30vw; */
 }
 
-@media (min-width: 375px) {
+@media (max-width: 1100px) {
   .footer--foot--right {
-    top: 500px;
-    border: 3px solid yellow;
+    width: 30vw;
   }
 }
+
 
 .footer--foot--right--images {
   display: flex;
   flex-direction: row;
   width: 150px;
+}
+
+@media (max-width: 1100px) {
+  .footer--foot--right--images p {
+    display: none;
+    width: 20px;
+  }
 }
 
 .footer--foot--right--images p:nth-last-child() {
@@ -678,23 +700,7 @@ hr {
   width: 100px;
 }
 
-@media (max-width: 375px) {
-  .footer--foot--right--images {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    width: 50px;
-    margin-top: 180px;
-    /* margin-top: 100px; */
-  }
-}
 
-@media (max-width: 375px) {
-  .footer--foot--right--images p {
-    display: none;
-  }
-}
 
 
 
