--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ nav {
     height: 64px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .button {
     width: 56px;
       height: 56px;
@@ -304,7 +304,9 @@ nav {
 
 @media (max-width: 500px) {
   .paragraf {
+    display: flex;
     margin-top: 50px !important;
+    gap: 36px !important;
   }
 }
 
@@ -399,7 +401,7 @@ figure {
 @media (max-width: 1000px) {
   figure {
     height: 350px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
 }
 
@@ -669,7 +671,7 @@ background-color: #B93815;
   .footer--links--left {
     width: 60vw;
     margin-top: 30px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
   }
 }
 
