--- a/src/index.css
+++ b/src/index.css
@@ -498,7 +498,7 @@ figcaption {
 @media (max-width: 420px) {
   .article {
     margin-top: 30px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
   }
 }
 
